# src/routes/auth.routes.ts
@@ -7,5 +7,7 @@ const router = Router();
 
 router.post('/register', validate(registerSchema), authController.register);
 router.post('/login', validate(loginSchema), authController.login);
+router.post('/login-user', validate(loginSchema), authController.login);
+router.post('/login-caregiver', validate(loginSchema), authController.login);
 
 export default router;
